--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>PocketPet</title>
 
-  <link href="https://fonts.googleapis.com/css2?family=Gaegu&family=Modak&family=Single+Day&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Coiny&display=swap" rel="stylesheet">
   <style type="text/css">
 
     * { margin: 0; padding: 0; box-sizing: border-box; }
-    body { font-family: sans-serif; line-height: 1.6; color: #333; }
+    body {font-family:'Coiny'; line-height: 1.6; color: #333; background-color: #FEF8F0;}
     a { text-decoration: none; color: inherit; }
     img { max-width: 100%; display: block; }
-    h1, h2, .about-title, .review-title, .section-title, header h1, .site-footer h2 {
-  font-family: 'Modak', cursive;}
+    h1, h2, h3, .about-title, .review-title, .section-title, header h1, .site-footer h2 {
+  font-family: 'Coiny';}
 
     header { background: #fafafa; padding: 20px 0; border-bottom: 1px solid #eee; }
     .container { width: 100%; width: 1200px; margin: 0 auto; }
@@ -28,14 +30,14 @@
 
     .btn { display: inline-block; padding: 12px 30px; background: #FFC269; color: #fff; border-radius: 4px; margin-top: 20px; }
     section { padding: 60px 0; border-bottom: 1px solid #eee; }
-    section h2 { font-size: 2rem; margin-bottom: 20px; }
+    section h2 { font-size: 3rem; margin-bottom: 20px; }
     .grid { display: grid; gap: 20px; }
     .two-col { grid-template-columns: 1fr 1fr; }
     .testimonials .item { background: #f9f9f9; padding: 20px; border-radius: 6px; }
     .testimonials .name { margin-top: 10px; font-weight: bold; }
     .about-section {background: url('paw-background.png') repeat; padding: 80px 20px;}
 	.about-container {max-width: 1200px;margin: 0 auto;}
-	.about-title {font-family: 'Comic Sans MS', 'Arial Rounded MT Bold', cursive;font-size: 3rem;color: #222;margin-bottom: 40px;text-align: left;}
+	.about-title {font-family: 'Coiny';cursive;font-size: 3rem;color: #222;margin-bottom: 40px;text-align: left;}
 	.card-grid {display: grid;grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 30px;}
 	.about-card {background: white; border-radius: 16px; box-shadow: 0 10px 20px rgba(0, 0, 0, 0.08) padding: 24px; display: flex; flex-direction: column; justify-content: space-between; transition: transform 0.2s ease;}
 	.about-card:hover {transform: translateY(-5px);}
@@ -45,11 +47,11 @@
 	.about-card a {font-weight: bold;color: #333; text-decoration: none; margin-top: auto;}
 	.background-image {background: url(Back3.jpeg); background-size: auto; background-attachment: fixed;}
 	.video-box {width: 100%; max-width: 960px; height: auto; display: block; margin: 0 auto;border-radius: 12px; box-shadow: 0 10px 30px rgba(0,0,0,0.2);}
-	.cat-status-section {background-color: #faf6ef;padding: 60px 20px; display: flex;flex-direction: column; gap: 20px; align-items: center;}
+	.cat-status-section {padding: 60px 20px; display: flex;flex-direction: column; gap: 20px; align-items: center;}
 	.img-left {align-self: flex-start; max-width: 300px;}
 	.img-right {align-self: flex-end;max-width: 300px;}
-	.cta-section {background-color: #faf6ef;padding: 80px 20px;display: flex; flex-direction: column; gap: 40px;} 
-	.cta-text h2 {font-family: 'Comic Sans MS', cursive; font-size: 3rem; margin-bottom: 10px;}
+	.cta-section {background-color: #FEF8F0;padding: 80px 20px;display: flex; flex-direction: column; gap: 40px;} 
+	.cta-text h2 {cursive; font-size: 3rem; margin-bottom: 10px;}
 	.cta-text p {font-size: 1.1rem; line-height: 1.6; max-width: 600px;}
 	.cta-image-container {position: relative; max-width: 100%;}
 	.cta-img {width: 100%; border-radius: 12px; display: block;}
@@ -57,11 +59,11 @@
 	.cta-box p {font-size: 0.95rem; margin-bottom: 10px;}
 	.buy-btn {background-color: #f7c96f; border: none; padding: 12px 24px; border-radius: 8px;font-size: 1rem;font-weight: bold; cursor: pointer; color: #000;}
 	.site-footer {background-color: #f7c96f; text-align: center; padding: 60px 20px; font-size: 0.95rem; color: #000;}
-	.site-footer h2 {font-family: 'Comic Sans MS', cursive; font-size: 2.5rem; margin-bottom: 20px;}
+	.site-footer h2 {font-family: 'Coiny'; cursive; font-size: 2.5rem; margin-bottom: 20px;}
 	.site-footer a {color: inherit; text-decoration: none; font-weight: bold;}
 	.site-footer a:hover {text-decoration: underline;}
 	.review-section {background-color: #fff8ee; padding: 80px 20px;}
-	.review-title {font-family: 'Comic Sans MS', cursive; font-size: 3rem; margin-bottom: 40px;text-align: left;}
+	.review-title {font-family: 'Coiny'; cursive; font-size: 3rem; margin-bottom: 40px;text-align: left;}
 	.review-container {display: flex; gap: 100px; overflow-x: auto; scroll-snap-type: x mandatory;padding-bottom: 10px;}
 	.review-card {background-color: #fff2dc; border-radius: 30px; padding: 20px; flex: 0 0 280px;scroll-snap-align: start; box-shadow: 0 10px 20px rgba(0,0,0,0.1);}
 	.avatar {width: 60px; border-radius: 50%; margin-bottom: 10px;}
@@ -138,17 +140,10 @@
     <div class="container">
       <h2>App UI</h2>
       <p>"이제 반려동물의 감정을 실시간으로 확인해보세요." 포켓펫 앱에서는 당신의 반려동물이 느끼는 감정을 아래와 같은 메시지로 알려줍니다:</p>
-      <img src="Mockup.png"></img>
-
- <section class="cat-status-section">
-  <img src="Comp3.png" alt="Michael is scared" class="img-left">
-  <img src="Comp4.png" alt="Michelle is not feeling well" class="img-right">
-  <img src="Comp2.png" alt="Michael doesn’t like food" class="img-left">
-  <img src="Comp1.png" alt="Michael is angry" class="img-right">
-</section>
-
+      <img src="Group1.png">
     </div>
   </section>
+  
   <section class="cta-section">
   <div class="cta-text">
     <h2>Talk to Your Pet</h2>
